fix: allowing compile against jdk8