@@ -8,6 +8,7 @@ import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.InputStream;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -62,7 +63,7 @@ public abstract class Module {
     public abstract String getAuthor();
 
     public List<String> noSync() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     public abstract void onEnable();
